# AIDev_ZoomCamp

./: .dockerignore  .gitignore  README.md
Assignment_1/: .gitignore  README.md
Assignment_1/templates/: base.html
Assignment_1/templates/todos/: confirm_delete.html  todo_form.html  todo_list.html
Assignment_1/todo_project/: settings.py  urls.py
Assignment_1/todos/: admin.py  forms.py  models.py  urls.py  views.py
Assignment_1/todos/migrations/: 0001_initial.py
Assignment_2/: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
Assignment_2/.npm-cache/: anonymous-cli-metrics.json
Assignment_2/client/: .gitignore  index.html  package-lock.json  package.json
Assignment_2/client/src/: App.jsx  index.css
Assignment_2/server/: pyproject.toml  requirements.txt
Assignment_2/server/app/: __init__.py  main.py
Assignment_2/server/tests/: test_http.py  test_socket.py
Assignment_3/: README.md  answers.md  main.py  pyproject.toml  search.py  test.py
